# MDP

./: .gitignore  CMakeLists.txt  MDP.cpp  README.md
I-talent/: portfolio_I-Talent_2425.md
documentation/: syntax.md
site/: index.html
site/assets/: script.js  style.css
site/assets/javascript/: cookie.js
site/assets/style/: code_theme.css
templateSite/: index.html
